--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,23 @@
 <html>
 <head>
   <title>Ojalabook</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag    "application", :media => "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<a href="#" class="navbar-brand">Oajalabook</a>
+			<ul class="nav navbar-nav">
+			<li class="active"><%=link_to "status",statuses_path %></li>
+			</ul>
+		</div>	
+</div>
 
-<%= yield %>
+  <div class="container">
 
+     <%= yield %>
+  </div>
 </body>
 </html>
